--- a/next-website/package.json
+++ b/next-website/package.json
@@ -20,5 +20,8 @@
     "react-visibility-sensor": "^5.0.2",
     "styled-components": "^4.2.0",
     "styled-normalize": "^8.0.6"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.0"
   }
 }
