feat: add spotify page

--- a/spotify/package.json
+++ b/spotify/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "next": "^8.0.4",
+    "rc-progress": "^2.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.6.1",
+    "react-rangeslider": "^2.2.0",
     "react-spring": "^8.0.19",
     "react-visibility-sensor": "^5.0.2",
     "styled-components": "^4.2.0",
